--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 							<li><a class="scroll" href="#services">Serviços</a></li>
 							<li><a class="scroll" href="#about">Sobre nós</a></li>
 							<li><a class="scroll" href="#team">Nosso time</a></li>
+                            <li><a target="_blank" href="http://blog.gentrop.com">Blog</a></li>
 							
 							
 							<!--<li><a class="scroll" href="#business-inteligence">BI</a></li>-->
@@ -428,7 +429,7 @@
 				</div>
 				<div class="description-welcome text-center">
 					<p>Empresa líder em soluções Salesforce Marketing Cloud.</p>
-					<img src="style/images/logo/SFMC_partner_horizontal.png" alt="Salesforce Marketing Cloud Partner" width="452" height="111">
+					<img src="style/images/logo/SFMC_partner.png" alt="Salesforce Marketing Cloud Partner" width="450" height="130">
 				</div>
 			</div>
 		</div>
@@ -790,7 +791,9 @@
 		</div>
 		<div class="divcod30"></div>
 		<div class="row">
-			<div class="col-md-3">
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+			<div class="col-md-6">
 				<div class="Team-Block">
 					<div class="Top-Img-Team">
 						<img src="style/images/team/Team-1.png" alt="Team" width="211" height="211">
@@ -807,7 +810,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-6">
 				<div class="Team-Block">
 					<div class="Top-Img-Team">
 						<img src="style/images/team/Team-2.png" alt="Team" width="211" height="211">
@@ -824,6 +827,8 @@
 					</div>
 				</div>
 			</div>
+            </div>
+            <div class="col-md-3"></div>
 
 			<!--
 			<div class="col-md-3">
